[package]
name = "image_utils2" 
version = "0.1.0"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
description = "Library providing functions for create and modify images."
repository = "https://github.com/IronThread/image_utils2"
keywords = ["circle","light","image"]

[dependencies]
image = "0"

